Made abstract in buildout.cfg editable by the custom.cfg file

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -37,6 +37,7 @@ etc-user =
 project = testbird
 version = 0.1.0
 slug = testbird
+abstract = WPS processes for testing and demos.
 
 [environment]
 recipe = collective.recipe.environment
@@ -67,7 +68,7 @@ workers = 3
 worker-class = sync
 # wps options
 title = ${settings:project}
-abstract = WPS processes for testing and demos.
+abstract = ${settings:abstract}
 keywords = WPS, PyWPS, Birdhouse, Python
 provider-name = Birdhouse/${settings:project}
 provider-url = http://${settings:slug}.readthedocs.org/en/latest/
