Made changes to README, docs and custom.cfg.example to display correct project name

--- a/custom.cfg.example
+++ b/custom.cfg.example
@@ -5,6 +5,9 @@ extends = buildout.cfg
 # hostname = localhost
 # http-port = 5000
 # output-port = 8090
+project = NAME-WPS
+slug = namewps
+abstract = A Web Processing Service to run the Met Office model NAME
 
 ## development options
 # log-level = WARN
