--- a/environment.yml
+++ b/environment.yml
@@ -35,4 +35,4 @@ dependencies:
 - pynameplot
 - pip:
   - sphinx-autoapi==0.5.0
-  - -e git+https://github.com/huard/sphinx-autodoc-pywps.git#egg=sphinx_autodoc_pywps
+  - git+https://github.com/huard/sphinx-autodoc-pywps.git#egg=sphinx_autodoc_pywps
